# minivess_mlops

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_env  LICENSE  README.md  bentofile.yaml  data.dvc  docker-compose.yml  entrypoint.sh  extra.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: app_docker-image.yml  build-env_image.yml  build-jupyter_image.yml  build_env_image.yml  build_train_image.yml  docker-image.yml  env_docker-image.yml  test:_train.yml  test_dataload.yml  test_train.yml
archived/: depr_funcs.py
configs/: base_config.yaml  defaults.yaml
configs/inference/: inference_folder.yaml
configs/runmode_configs/: debug_config.yaml  test_data_config.yaml  test_dataload_config.yaml  test_train_config.yaml
configs/train_configs/: train_task_test.yaml
configs/tutorials/: train_demo.yaml
data/: .gitignore  json.dvc  minivess.dvc  raw.dvc  seg.dvc
demos/: README.md
demos/hydra/: hydra_minivess_demo.py
deployment/: Dockerfile  Dockerfile_Jupyter  Dockerfile_env  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
deployment/bento/: README.md  bento_status_check.py  conda.yaml  push_bento_to_registry.py  service.py  test_input.json
deployment/bentoml/: conda.yaml  service.py  test_input.json
ml_tests/: README.md  check_files.py  dataloader_tests.py  dataset_tests.py  file_tests.py  ml_tests.py  model_tests.py  mount_tests.py  test_utils.py
notebooks/: README.md  train_custom_model.ipynb  train_custom_model.py  train_monai_model.ipynb  train_monai_model_colab.ipynb
secrets/: mlflow_credentials.ini
src/: eval.py  run_inference.py  run_training.py  train.py
src/configs/: task_config.yaml
src/datasets/: README_DVC.md  dvc_utils.py  inference_data.py  minivess.py  torch_dataset.py
src/deprecated_functions/: depr_funcs.py
src/inference/: bentoml_utils.py  ensemble_main.py  ensemble_model.py  ensemble_utils.py  eval.py  inference_utils.py  metrics.py
src/log_ML/: json_log.py  log_config.py  log_crossval.py  log_ensemble.py  log_epochs.py  log_metrics_lowlevel.py  log_model_registry.py  log_utils.py  logging_main.py  mlflow_admin.py  mlflow_init.py  mlflow_log.py  mlflow_tests.py  mlflow_utils.py  model_saving.py  results_utils.py  s3_utils.py  wandb_log.py
src/train_AI/: experiment.py  train.py
tests/: test_utils.py
(+44 files in other folders)
