[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["petteriteikari <petteri.teikari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.17"
tqdm = "^4.65.0"
pyyaml = "^6.0"
loguru = "^0.7.0"
torch = ">=2.0.0, !=2.0.1"
monai = {extras = ["nibabel", "sklearn"], version = "^1.2.0"}
requests = "^2.28.2"
scikit-learn = "^1.2.2"
tensorboard = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
