[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["petteriteikari <petteri.teikari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.17"
tqdm = "^4.65.0"
pyyaml = "^6.0"
loguru = "^0.7.0"
torch = ">=2.0.0, !=2.0.1"
monai = {extras = ["nibabel", "sklearn"], version = "^1.2.0"}
requests = "^2.28.2"
scikit-learn = "^1.2.2"
tensorboard = "^2.14.0"
wandb = "^0.15.9"
mlflow = "^2.6.0"
scikit-image = "^0.21.0"
gdown = "^4.7.1"
lmdb = "^1.4.1"
itk = "^5.3.0"
einops = "^0.6.1"
transformers = "^4.33.0"
pynrrd = "^1.0.0"
pytorch-ignite = "^0.4.12"
dvc = {extras = ["s3"], version = "^3.25.0"}
weightwatcher = "^0.7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
